fix z-index of waiter station

--- a/src/views/pages/waiterStation.module.css
+++ b/src/views/pages/waiterStation.module.css
@@ -15,7 +15,7 @@ h1 {
     column-count: 3;
     column-gap: 10px;
     position: fixed;
-    z-index: 100;
+    z-index: 99;
     top: 5vh;
     right: 3vw;
     background-color: white;
